kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cubix-service
  labels:
    training: block3
spec:
  selector:
    training: block3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
