kubernetes/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    training: block3
    homework: frontapp
spec:
  rules:
  - http:
      paths:
      - path: /frontapp
        pathType: Prefix
        backend:
          service:
            name: cubix-service
            port:
              number: 8080
